--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
   <section class="titletwo"></section>
   <div class="h4-container">
     <h6 class="white fw-800 fs-l2 mb-5">
-      "Donde la creatividad se encuentra con la vanguardia, tu éxito comienza."
+      "Donde la creatividad se encuentra con la innovación, tu éxito comienza."
     </h6>
   </div>
 
