--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
       <div class="w-100pc md-w-40pc">
         <div class="br-8 p-5 m-5 energy-effect">
           <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5">
-            <i data-feather="server" class="w-l5"></i>
+            <i data-feather="code" class="w-l5"></i>
           </div>
           <h4 class="white fw-600 fs-m3 mb-5">Desarrollo web a la medida</h4>
           <div class="green-lightest fw-600 fs-m1 lh-3 opacity-50">
@@ -448,7 +448,7 @@
       <div class="w-100pc md-w-40pc">
         <div class="br-8 p-5 m-5 energy-effect">
           <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5">
-            <i data-feather="shopping-cart" class="w-l5"></i>
+            <i data-feather="tool" class="w-l5"></i>
           </div>
           <h4 class="white fw-600 fs-m3 mb-5">Diseños para cada necesidad</h4>
           <div class="green-lightest fw-600 fs-m1 opacity-50">
@@ -480,7 +480,7 @@
       <div class="w-100pc md-w-40pc">
         <div class="br-8 p-5 m-5 energy-effect">
           <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5">
-            <i data-feather="shopping-cart" class="w-l5"></i>
+            <i data-feather="share-2" class="w-l5"></i>
           </div>
           <h4 class="white fw-600 fs-m3 mb-5">"Social media" el éxito en las redes sociales.</h4>
           <div class="green-lightest fw-600 fs-m1 opacity-50">
@@ -2475,7 +2475,7 @@
   <footer class="p-5 md-p-l5 bg-green-lightest-10">
     <div class="flex flex-wrap">
       <div class="md-w-25pc mb-10">
-        <img src="assets/images/logoCodesDebut.png" class="w-l5" alt="Logo CrisInnov" />
+        <img src="assets/images/logo.png" class="w-l5" alt="Logo CrisInnov" />
         <div class="white opacity-70 fs-s2 mt-4 md-pr-10">
           <p>En CrisInnov, valoramos tu confianza y privacidad.</p>
           <br />
@@ -2547,11 +2547,11 @@
           </button>
         </div>
         <div class="flex justify-around my-8">
-          <a href="#" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="gitlab"
+          <a href="https://github.com/crisinnov/" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="github"
               class="absolute-center h-4" style="color: black"></i></a>
-          <a href="#" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="facebook"
+          <a href="#" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="gitlab"
               class="absolute-center h-4" style="color: #3b5998"></i></a>
-          <a href="#" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="instagram"
+          <a href="https://www.instagram.com/crisinnov/" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="instagram"
               class="absolute-center h-4" style="color: #000000"></i></a>
         </div>
         <div class="text-center mt-4">
