--- a/index.html
+++ b/index.html
@@ -2680,7 +2680,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="flex justify-around my-8">
           <a href="https://github.com/crisinnov/" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="github"
               class="absolute-center h-4" style="color: black"></i></a>
-          <a href="#" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="gitlab"
+          <a href="https://www.linkedin.com/in/cristian-david-lopez-gomez" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="linkeding"
               class="absolute-center h-4" style="color: #3b5998"></i></a>
           <a href="https://www.instagram.com/crisinnov/" class="relative p-5 bg-white br-round hover-scale-up-1 ease-400"><i data-feather="instagram"
               class="absolute-center h-4" style="color: #000000"></i></a>
@@ -2881,9 +2881,6 @@ s0.parentNode.insertBefore(s1,s0);
       </a>
       <a href="https://www.facebook.com/profile.php?id=61575147898070" target="_blank" class="floating-button facebook">
         <i class="fab fa-facebook-f"></i>
-      </a>
-      <a href="https://www.linkedin.com/in/cristian-david-lopez-gomez" target="_blank" class="floating-button linkedin">
-        <i class="fab fa-linkedin-in"></i>
       </a>
     </div>
 
