--- a/index.html
+++ b/index.html
@@ -2688,7 +2688,7 @@ s0.parentNode.insertBefore(s1,s0);
         <div class="text-center mt-4">
           <p class="fs-s6 white">
             © 2020-2021-2022-2023-2024 - 2025 CrisInnov. Todos los derechos
-            reservados. Web creada gracias al Open Source...
+            reservados. Web creada gracias al Open Source.
           </p>
         </div>
       </div>
