--- a/index.html
+++ b/index.html
@@ -623,7 +623,7 @@ s0.parentNode.insertBefore(s1,s0);
           <div class="flex justify-center items-center bg-green-lightest-10 white w-l5 h-l5 br-round mb-5">
             <i data-feather="share-2" class="w-l5"></i>
           </div>
-          <h4 class="white fw-600 fs-m3 mb-5">"Social media" el éxito en las redes sociales.</h4>
+          <h4 class="white fw-600 fs-m3 mb-5">"Social media" el éxito en las redes.</h4>
           <div class="green-lightest fw-600 fs-m1 opacity-50">
             Controla todas tus redes desde un solo lugar. Publica, pauta e interactúa automáticamente. Ahorra tiempo,
             gana visibilidad y haz que todo fluya.
