--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ s0.parentNode.insertBefore(s1,s0);
   <section class="imgone">
     <div class="container">
       <div class="w-100pc md-w-33pc p-10 energy-card mx-auto">
-        <a href="https://innovaticgroupllc.com/" class="block no-underline p-5 br-8 hover-bg-gray-light hover-scale-up-1 ease-300">
+        <a href="#">
           <img class="w-100pc" src="assets/images/portfolio-03.jpg" alt="innovaticgroupllc sitio web desarrollado por CrisInnov" />
           <p class="fw-600 white fs-m3 mt-3 text-center">
             Landing page, tienda en línea o plataforma de pago.
