--- a/index.html
+++ b/index.html
@@ -1002,8 +1002,8 @@ s0.parentNode.insertBefore(s1,s0);
   <section class="imgone">
     <div class="container">
       <div class="w-100pc md-w-33pc p-10 energy-card mx-auto">
-        <a href="https://lucasburgues.github.io/" class="block no-underline p-5 br-8 hover-bg-gray-light hover-scale-up-1 ease-300">
-          <img class="w-100pc" src="assets/images/portfolio-02.jpg" alt="lucas burgues sitio desarrollado por CrisInnov" />
+        <a href="https://salchipotatomanizales.github.io/" class="block no-underline p-5 br-8 hover-bg-gray-light hover-scale-up-1 ease-300">
+          <img class="w-100pc" src="assets/images/Salchipotatoweb.jpg" alt="Salchipotato desarrollado por CrisInnov" />
           <p class="fw-600 white fs-m3 mt-3 text-center">
             Página para negocio de restaurante o comidas rápidas.
           </p>
