--- a/index.html
+++ b/index.html
@@ -998,7 +998,7 @@ s0.parentNode.insertBefore(s1,s0);
     }
   </style>
 
-  <!-- imgone -->
+  <!-- imgone2 -->
   <section class="imgone">
     <div class="container">
       <div class="w-100pc md-w-33pc p-10 energy-card mx-auto">
@@ -1161,7 +1161,7 @@ s0.parentNode.insertBefore(s1,s0);
     }
   </style>
 
-  <!-- imgone -->
+  <!-- imgone3 -->
   <section class="imgone">
     <div class="container">
       <div class="w-100pc md-w-33pc p-10 energy-card mx-auto">
@@ -1218,7 +1218,66 @@ s0.parentNode.insertBefore(s1,s0);
       }
     }
   </style>
+<!-- imgone4 -->
 
+      <section class="imgone">
+  <div class="container">
+    <div class="w-100pc md-w-33pc p-10 energy-card mx-auto">
+      <a href="https://fabelasas.github.io/" class="block no-underline p-5 br-8 hover-bg-gray-light hover-scale-up-1 ease-300">
+        <img class="w-100pc" src="assets/images/Fabelasas.jpg" alt="Sitio web de empresa de rifas, apuestas y plataformas deportivas." />
+        <p class="fw-600 white fs-m3 mt-3 text-center">
+          Sitio web de empresa de rifas, apuestas y plataformas deportivas.
+        </p>
+      </a>
+    </div>
+  </div>
+</section>
+
+<style>
+  .imgone {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    margin-bottom: 50px;
+    /* Espacio entre secciones */
+  }
+
+  .imgone h4 {
+    margin-bottom: 20px;
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    /* Hace que sea responsivo */
+    width: 100%;
+    max-width: 1200px;
+    margin: 0 auto;
+  }
+
+  .energy-card {
+    max-width: 400px;
+    /* Ajusta el tamaño de la tarjeta */
+    width: 100%;
+  }
+
+  .energy-card img {
+    border-radius: 8px;
+  }
+
+  @media (max-width: 768px) {
+    .energy-card {
+      padding: 10px;
+      max-width: 100%;
+    }
+  }
+</style>
+      
+<!-- imgone5 -->
 <section class="imgone">
   <div class="container">
     <div class="w-100pc md-w-33pc p-10 energy-card mx-auto">
