--- a/index.html
+++ b/index.html
@@ -444,10 +444,10 @@ s0.parentNode.insertBefore(s1,s0);
     <div class="servicios-list">
       <div class="servicio-card" data-color="#39ff14" data-hover="#00ff99">Desarrollo web a medida</div>
       <div class="servicio-card" data-color="#ffa500" data-hover="#ff8c00">Rediseño y mejora de sitios existentes</div>
-      <div class="servicio-card" data-color="#25D366" data-hover="#32cd32">Automatización de WhatsApp con IA, sin costos mensuales</div>
+      <div class="servicio-card" data-color="#25D366" data-hover="#32cd32">Automatización de WhatsApp con IA</div>
       <div class="servicio-card" data-color="#8e44ad" data-hover="#9b59b6">CRM + Social media sin pagos mensuales</div>
       <div class="servicio-card" data-color="#00ffff" data-hover="#40e0d0">Análisis de datos en web y redes sociales</div>
-      <div class="servicio-card" data-color="#0000cd" data-hover="#1e90ff">Sistema omnicanal para atención centralizada</div>
+      <div class="servicio-card" data-color="#0000cd" data-hover="#1e90ff">Sistema unificado omnicanal</div>
       <div class="servicio-card" data-color="#ffff00" data-hover="#ffd700">Posicionamiento SEO para atraer clientes</div>
       <div class="servicio-card" data-color="#1E90FF" data-hover="#00FFFF">Hosting y certificados de seguridad SSL</div>
 
